language bar broken on mobile devices. fixed.

--- a/style/custom.css
+++ b/style/custom.css
@@ -3,10 +3,9 @@
 .language { position: absolute; z-index: 100; background: linear-gradient(#585858, #242424); width: 100%; top: -3px; box-shadow: 1px 2px 3px #000; opacity: 0.95; }
 	.language.fixed { position: fixed; overflow-y: auto; top: 0px; }
 	.language .nav { margin-bottom: 0px; }
-		.language .nav li:first-child a { margin-left: 25px; }
-	.language .nav-pills > li > a { text-transform: uppercase; font-size: 0.85em; font-weight: 700; margin: 9px 5px 8px; padding: 3px 8px; color: #55CEFA; }
-		.language .nav-pills > li > a:hover { background-color: inherit !important; text-decoration: underline; cursor: pointer; }
-	.language .nav-pills > .active > a, .language .nav-pills > .active > a:hover { background-color: #15191D !important; text-decoration: none; cursor: default; box-shadow: rgba(181, 184, 247, 0.34) 0 1px 0,#15191C 0 1px 0 inset,#15191D 0 -1px 0 inset; color: #fff; }
+	.language ul li a { text-transform: uppercase; font-size: 0.85em; font-weight: 700; color: #55CEFA; }
+	.language ul > li > a:hover { background-color: inherit !important; text-decoration: underline; cursor: pointer; }
+	.language ul > .active > a, .language ul > .active > a:hover { background-color: #15191D !important; text-decoration: none; cursor: default; box-shadow: rgba(181, 184, 247, 0.34) 0 1px 0,#15191C 0 1px 0 inset,#15191D 0 -1px 0 inset; color: #fff; }
 ul.level-3 { display: none; }
 .lang-nolang { display: block !important; font-family: 'Lato' sans-serif !important; font-size: 0.95em !important; color: #ddd; }
 	.lang-nolang .h1, .lang-nolang .h2, .lang-nolang .h3, .lang-nolang .h4 { display: block; color: #fff; }
