--- a/style/theme/white/style.css
+++ b/style/theme/white/style.css
@@ -168,7 +168,7 @@ body:not(.big-h3) .content h3 { font-size: 0.9em; }
 .content h1:first-child { padding-top: 0; }
 	.content h1:first-child,
 	.content h1:first-child a,
-	.content h1:first-child a:visited { color: #505050; padding-top: 10px;}
+	.content h1:first-child a:visited { color: #505050; padding-top: 10px; }
 		.content h1:first-child:before { display: none; }
 
 @media (max-width: 768px) /* Tablet */ {
@@ -197,6 +197,8 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 }
 
 @media (max-width: 1180px) /* Small desktop */ {
+	.language ul li a { margin: 6px 3px 5px; padding: 3px 6px; }
+	.language .nav li:first-child a { margin-left: 20px; }
 	.content pre > code { background: #15191D; border: solid 1px #e7eaee; border-top: solid 1px #dbdde2; border-left: solid 1px #e2e5e9; display: block; padding: 10px; -webkit-border-radius: 2px; border-radius: 2px; overflow: auto; }
 	.content pre > code { -webkit-overflow-scrolling: touch; }
 		.content pre > code::-webkit-scrollbar { width: 15px; height: 15px; }
@@ -214,11 +216,13 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 .content .button + em { color: #9090aa; }
 
 @media (min-width: 1180px) /* Big desktop */ {
+	.language .nav li:first-child a { margin-left: 20px; }
 	body:not(.no-literate) .content-root { background-color: #15191D; -webkit-box-shadow: inset 780px 0 #fff, inset 781px 0 #dfe2e7, inset 790px 0 5px -10px rgba(0,0,0,0.1); box-shadow: inset 780px 0 #fff, inset 781px 0 #dfe2e7, inset 790px 0 5px -10px rgba(0,0,0,0.1); }
 	.language { left: 778px; }
 }
 
 @media (min-width: 1180px) /* Big desktop */ {
+	.language ul li a { margin: 9px 5px 8px; padding: 3px 8px; }
 	body:not(.no-literate) .content { padding-left: 0; padding-right: 0; width: 930px; max-width: none; }
 		body:not(.no-literate) .content > p,
 		body:not(.no-literate) .content > ul,
@@ -290,6 +294,8 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 
 @media (max-width: 480px) /* Mobile */ {
 	.right { display: none; }
+	.language .nav li:first-child a { margin-left: 10px; }
+	.language ul li a { margin: 5px 2px 4px; padding: 2px 5px; }
 }
 
 .menubar { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; }
